--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -1,12 +1,11 @@
-FROM ruby:2.0.0-p648
+FROM ruby:2.6.10
 RUN apt-get update \
   && apt-get -y --no-install-recommends install nodejs \
   && rm -rf /var/lib/apt/lists/*
 WORKDIR /opt/mowoli
 COPY Gemfile Gemfile.lock ./
 RUN gem install bundler:2.0.0.pre.3
-RUN bundle install
-# --deployment --without development test
+RUN bundle install --deployment --without development test
 COPY . .
 RUN mkdir -p var/mwl var/db var/hl7
 VOLUME /opt/mowoli/var/mwl /opt/mowoli/var/db /opt/mowoli/var/hl7
